// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper clearButton"
>
  <button
    className="container uui-button-box uui-enabled -clickable root size-36 color-sky font-sans-semibold uui-no-left-icon uui-no-right-icon"
    href={null}
    onClick={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="uui-caption line-height-18 font-size-14 v-padding-9"
    >
      CLOSE ALL NOTIFICATIONS
    </div>
  </button>
</div>
`;

exports[`ErrorNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-fire typeError"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root color-night600 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`HintNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-sky typeHint"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root color-night600 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-sun"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root color-night600 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`NotificationCard should be rendered correctly with icon 1`] = `
<div
  className="notificationWrapper color-sun"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root color-night600 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`SuccessNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-grass typeSuccess"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root color-night600 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`WarningNotification should be rendered correctly 1`] = `
<div
  className="notificationWrapper color-sun typeWarning"
>
  <div
    className="mainPath"
  >
    <div
      className="iconWrapper"
    >
      <div
        className="container uui-icon uui-enabled actionIcon"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </div>
    <div
      className="content"
    />
    <button
      className="container uui-button-box uui-enabled -clickable root color-night600 closeIcon"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
</div>
`;
